--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,10 +1,10 @@
-.app {
+/* .app {
   text-align: center;
-}
+} */
 
 .header {
   background-color: #282c34;
-  min-height: 20vh;
+  /* min-height: 20vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
