--- a/src/styling/Pages.css
+++ b/src/styling/Pages.css
@@ -8,8 +8,8 @@
 .canvasContainer {
     /* position: fixed; */
     /* top: 0%; */
-    /* height: 100vh;
-    width: 100vw; */
+    height: 100vh;
+    width: 100vw;
     z-index: 100;
     background-color: black;
 }
