--- a/src/styling/Overlay.css
+++ b/src/styling/Overlay.css
@@ -1,24 +1,45 @@
+
+
 .overlaySection {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
     color: white;
     /* height: 85.5vh; */
     height: 100vh;
-    width: 100vw;
     max-height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
     border: 1px solid white;
-    padding: 50px;
+    scroll-snap-align: start;
+    overflow: hidden;
+    flex-wrap: nowrap;
 }
 
 .overlaySection .inner {
-    background-color: #282c34;
+    /* background-color: #282c34; */
+    position: absolute;
     color: white;
     width: 30vw;
+    height: 60vh;
+    min-width: 0rem;
+    min-height: 0rem;
+}
+
+.overlaySection .inner .contents {
+    background-color: #282c34;
+    color: white;
+    overflow: hidden;
     height: 100%;
-    max-height: 100vh;
 }
 
 .overlaySection .left {
-    width: 30vw;
+    left: 0%;
+    margin: 20px;
+}
+.overlaySection .right {
+    right: 0%;
+    margin: 20px;
 }
